- Numerous changes and fixes from storymode codebase   * Destroy a layer once it is not active to prevent browser memory usage from getting out of control and crashing   * Go to first waypoint once a theme is loaded   * Loop through all the themes when in automode   * Remove waypoint thumbnail highlight when out of view of the waypoint (previously just annotation disappeared)   * Misc other changes and cleanup

--- a/examples/webgl-timemachine/index.css
+++ b/examples/webgl-timemachine/index.css
@@ -499,7 +499,7 @@ fieldset {
   font-size: 80px;
   line-height: 85px;
 }
-#content {
+#letterbox-content {
   position: relative;
   width: 100%;
   height: 100%;
@@ -510,7 +510,7 @@ fieldset {
   width: 1330px;
   height: 1076px;
 }
-#content.recording {
+#letterbox-content.recording {
   /* For recording in different heights, change the height of #timeMachine.recording and #content.recording */
   width: 1330px;
   height: 1284px;
